# jutter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: AndroidManifest.xml  ant.properties  build.properties  build.xml  sign-release.cmd
android/jni/: Android.mk  Application.mk  android_assetmanager.c  logging.h
android/res/layout/: main.xml
android/res/values/: ids.xml  strings.xml
android/src/net/saaltink/game/: PassPerfectActivity.java
cmake/: FindSDL2.cmake
data/shaders/gl3/: effect.frag  effect.vert  geometry.frag  geometry.vert  particles.frag  particles.vert  strandeditem.frag  strandeditem.vert
data/shaders/gles3/: effect.frag  effect.vert  geometry.vert  particles.frag  particles.vert
libs/: sdl2.mk
src/: gamerules.cpp  gamerules.h  program.cpp
src/common/: fileio.cpp  fileio.h  geometry.cpp  geometry.h  particles.cpp  particles.h  postprocesseffect.cpp  postprocesseffect.h  randm.cpp  randm.h  shader.cpp  shader.h  texture.cpp  texture.h  timer.cpp  timer.h
src/entities/: cameraentity.cpp  cameraentity.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  strandeditementity.cpp  strandeditementity.h  worldentity.cpp  worldentity.h
src/gamemodes/: confirmexitgamemode.cpp  confirmexitgamemode.h  gamemode.cpp  gamemode.h  gamemodes.h  mainmenumode.cpp  mainmenumode.h  practicegamemode.cpp  practicegamemode.h
src/system/: glfw-setup.cpp  glfw-setup.h  iinput.h  impl-headers.cpp  input.cpp  input.h  platform-opengl.h  sdl2-setup.cpp
src/ui/: animatedvalue.cpp  animatedvalue.h  buttoncontrol.cpp  buttoncontrol.h  colors.h  control.cpp  control.h  fadeablecontrol.h  fadeout.cpp  fadeout.h  fadeoutlabelcontrol.cpp  fadeoutlabelcontrol.h  fadeoutswipe.cpp  fadeoutswipe.h  fonts.h  hintcontrol.cpp  hintcontrol.h  imagecontrol.cpp  imagecontrol.h  labelcontrol.cpp  labelcontrol.h  panelcontrol.cpp  panelcontrol.h  scorebugcontrol.cpp  scorebugcontrol.h  textalignments.h  ui.cpp  ui.h
tests/: test-animatedvalue.cpp  test-highscore.cpp
